--- a/app/static/zoho_test.html
+++ b/app/static/zoho_test.html
@@ -7,30 +7,22 @@
 </head>
 
 <body>
+    <h1>Test AngelBot</h1>
 
-    <h2>Prueba del Chatbot Zoho (Staging)</h2>
-
-    <script type="text/javascript">
-        var $zoho = $zoho || {};
+    <script>
+        window.$zoho = window.$zoho || {};
         $zoho.salesiq = $zoho.salesiq || {
-            widgetcode: "TU_WIDGET_CODE_AQUÍ",
-            values: {}, ready: function () { }
+            ready: function () {
+                // Configura el tiempo de espera infinito
+                ZohoSalesIQ.Chat.setWaitingTime(-1);
+            }
         };
-        var d = document;
-        s = d.createElement("script");
-        s.type = "text/javascript";
-        s.id = "zsiqscript";
-        s.defer = true;
-        s.src = "https://salesiq.zoho.eu/widget";
-        t = d.getElementsByTagName("script")[0];
-        t.parentNode.insertBefore(s, t);
     </script>
 
-    <script>window.$zoho = window.$zoho || {}; $zoho.salesiq = $zoho.salesiq || { ready: function () { } }</script>
     <script id="zsiqscript"
-        src="https://salesiq.zohopublic.eu/widget?wc=siq5839878f02b87d35ed25acd38dc2400d296f979d13fed49d295b6375d4836a03"
-        defer></script>
-
+        src="https://salesiq.zohopublic.eu/widget?wc=siqf8269d575b767fa9232b4fd3e8b2411f52b6f803837dad4aec30464235b84fc5f458ed756dca30b7df2318631549968c"
+        defer>
+        </script>
 </body>
 
 </html>
